--- a/azdevops-ui/Dockerfile
+++ b/azdevops-ui/Dockerfile
@@ -4,8 +4,11 @@ WORKDIR /app
 
 COPY package*.json ./
 RUN npm install
+
 COPY . .
 
-EXPOSE 3001
-CMD ["node", "server.js"]
+RUN npm run build
 
+EXPOSE 3000
+
+CMD ["npm", "start"]
